# stock-monitor

./: .gitignore  LICENSE  README.md  app_logger.py  config.py  main.py  pyproject.toml  requirements.txt
database/: __init__.py  database_utils.py  init_db.py
docs/: faq.md
helpers/: data_cleaner.py
models/: stock_model.py
routes/: api_routes.py
services/: data_collector.py  scheduler_service.py  stock_analyzer.py
